# camera_idl

./: .gitignore  CMakeLists.txt  build.sh
protos/: coordinator.proto
